# ai-cookbook

./: .gitignore  .gitmodules  README.md
WeatherImpact/: README.md  airport_impact.py  app.py  config.py  data_fetcher.py  hurricane-impact-analysis-72dbc22d.plan.md  hurricane_analyzer.py  insurance_calculator.py  pipeline.py  pyproject.toml  requirements.txt  schedule_daily.py  visualizer.py
WeatherImpact/WeatherImpact/: __init__.py  airport_impact.py  config.py  data_fetcher.py  hurricane_analyzer.py  hurricane_data_loader.py  insurance_calculator.py  pipeline.py  risk_engine.py  schedule_daily.py  traveler_risk.py  visualizer.py
WeatherImpact/examples/: clean_imports_example.py  get_hurricane_tracks.py  ibtracs_pipeline_integration.py
WeatherImpact/models/: requests.py  responses.py
WeatherImpact/notebooks/: helene_2024_analysis.ipynb  quick_test.py  step_by_step_demo.py  test_venv.ipynb  vscode_interactive.py
WeatherImpact/outputs/: AL972024_interactive_map_20251015_143245.html  EP092024_interactive_map_20251015_133341.html  WP142024_interactive_map_20251015_133341.html
WeatherImpact/outputs/run_20251015_133341/: analysis_report.txt  analysis_results.json
WeatherImpact/outputs/run_20251015_141352/: analysis_report.txt  analysis_results.json
n8n/ghostwriter/: principles.md
